--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="./Assets/Styles/style.css">
     <title>ToDoS</title>
@@ -12,11 +13,62 @@
     <main class="main-section container-fluid">
       <div class="card">
         <h5 class="card-header text-center">My Tasks - Let's call the TODOS!</h5>
-        <div class="card-body">
-          <h5 class="card-title">Special title treatment</h5>
-          <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+        <div class="card-body text-center">
+          <h5 class="card-title">Add Todos</h5>
+          <div class="input-group mb-3">
+            <input type="text" class="form-control" placeholder="Task" id="task-name" aria-label="current task" aria-describedby="button-addon2">
+            <input type="text" class="form-control" placeholder="Task description" id="task-descript" aria-label="current task" aria-describedby="button-addon2">
+            <button class="btn btn-success" type="submit" id="button-addon2">Add todo</button>
+          </div>
         </div>
+        <div class="task-area" id="my-tasks">
+          <ul class="tasks">
+            <li class="list-item d-flex flex-row">
+              <div class="task-description">
+                <input class="is-done" type="checkbox">
+                <h6>First item</h6>
+                <p>First item descript</p>
+              </div>
+              <div>
+                <i class="bi bi-pencil"></i>
+                <i class="bi bi-trash"></i>
+              </div>
+            </li>
+            <li class="list-item d-flex flex-row">
+              <div class="task-description">
+                <input class="is-done" type="checkbox">
+                <h6>Second item</h6>
+                <p>Second item descript</p>
+              </div>
+              <div>
+                <i class="bi bi-pencil"></i>
+                <i class="bi bi-trash"></i>
+              </div>
+            </li>
+            <li class="list-item d-flex flex-row">
+              <div class="task-description">
+                <input class="is-done" type="checkbox">
+                <h6>Third item</h6>
+                <p>Third item descript</p>
+              </div>
+              <div>
+                <i class="bi bi-pencil"></i>
+                <i class="bi bi-trash"></i>
+              </div>
+            </li>
+            <li class="list-item d-flex flex-row">
+              <div class="task-description">
+                <input class="is-done" type="checkbox">
+                <h6>Fourth item</h6>
+                <p>Fourth item descript</p>
+              </div>
+              <div>
+                <i class="bi bi-pencil"></i>
+                <i class="bi bi-trash"></i>
+              </div>
+            </li>
+          </ul>
+        </div> 
       </div>
     </main>
     <script src="app.js"></script>
