:construction: implement the createTask function in app.js

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           </div>
         </div>
         <div class="task-area" id="my-tasks">
-          <ul class="tasks">
+          <ul class="tasks" id="task-list">
             <li class="list-item d-flex flex-row">
               <div class="task-description">
                 <input class="is-done" type="checkbox">
