:sparkles: add edit, delete and add new task functionalities

--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
   <body>
     <main class="main-section container-fluid">
       <div class="card">
-        <h5 class="card-header text-center">My Tasks - Let's call the TODOS!</h5>
-        <div class="card-body text-center">
+        <h5 class="card-header text-center">My Tasks - Let's call them TODOS!</h5>        <div class="card-body text-center">
           <h5 class="card-title">Add Todos</h5>
           <div class="input-group mb-3">
             <input type="text" class="form-control" placeholder="Task" id="task-name" aria-label="current task" aria-describedby="button-addon2">
